[package]
name = "abi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.8"
prost-types = "0.11.8"
thiserror = "1.0.39"
tonic = { version = "0.8.3", features = ["gzip"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
serde = { version = "1.0.154", features = ["derive"] }
anyhow = "1.0.69"
to_sql_condition = "0.2.1"
chrono = "0.4.24"
derive_builder = "0.12.0"

[build-dependencies]
tonic-build = "0.8.4"
